<resources>
    <string name="app_name">HuaweiSettings</string>

    <string name="pref_general_title">General</string>
    <string name="pref_general_force_mic_title">Force microphone</string>
    <string name="pref_general_force_mic_summary">Always use phone\'s microphone</string>

    <string name="pref_general_bt_power_title">Bluetooth power</string>
    <string-array name="pref_general_bt_power_entries">
        <item>Low (Power Class 3)</item>
        <item>Normal (Power Class 2)</item>
        <item>High (Power Class 1)</item>
    </string-array>


    <string name="pref_usb_title">USB</string>
    <string name="pref_usb_host_title">Host mode</string>
    <string name="pref_usb_host_summary">Attach peripherals to your device</string>
    <string name="pref_usb_host_not_title">Host mode on</string>
    <string name="pref_usb_host_not_text">Tap to open</string>

    <string name="pref_usb_current_title">Charging current</string>
    <string-array name="pref_usb_current_entries">
        <item>Automatic</item>
        <item>0ma (disabled)</item>
        <item>100mA</item>
        <item>500mA (usb charger)</item>
        <item>800mA (usb charger)</item>
        <item>1000mA (dedicated charger)</item>
    </string-array>


    <string name="pref_sensors_title">Sensors</string>
    <string name="pref_sensors_mag_calib_title">Magnetic sensor calibration</string>
    <string name="pref_sensors_mag_calib_summary">Delete previous calibration</string>


    <string name="pref_hwaddr_title">HW Addresses</string>
    <string name="pref_hwaddr_custom_title">Custom HW addresses</string>
    <string name="pref_hwaddr_custom_summary">Use custom BT/WLAN MAC address</string>
    <string name="pref_hwaddr_bt_title">Bluetooth MAC Address</string>
    <string name="pref_hwaddr_wlan_title">Wi-Fi MAC Address</string>

    <!-- Toasts -->
    <string name="toast_replug_headset">Please replug headset</string>
    <string name="toast_removed_calibration">Magnetic calibration removed</string>
    <string name="toast_restart_bluetooth">Please restart Bluetooth</string>
    <string name="toast_restart_wifi">Please restart Wi-Fi</string>

    <!-- Notifications -->
    <string name="not_usb_host_title">USB host turned on</string>
    <string name="not_usb_host_text">Turn off host to save power</string>
</resources>
